Fix chain of overflow properties above monaco editor
Fixes: #41

--- a/src/client/app/pages/editor/components/monaco/monaco.component.scss
+++ b/src/client/app/pages/editor/components/monaco/monaco.component.scss
@@ -3,7 +3,6 @@
 :host {
     height: calc(60% - 14px); // for the resize handle
     display: block;
-    overflow: hidden;
 
     .monaco-toolbar {
         background-color: $code-bg-color;
